--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -56,8 +56,9 @@
   /* Hover effect */
   button:hover {
     background-color: transparent; /* Set background to transparent on hover */
-    border: 2px solid #fff; /* White border on hover */
-    background-image: linear-gradient(45deg, #217396, #3c4c57); /* Gradient from dark blue to light blue */
+    border: 2px solid #b4c7d5ad; /* White border on hover */
+    background-image: linear-gradient(45deg, #a9d7d7, #5ea9d2); /* Gradient from dark blue to light blue */
+    
   }
   /* Form display */
   form {
